--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
   padding: 40px 20px;
-  background-color: #222;
+  background-color: var(--dark-gray);
   color: #fff;
   font-family: Arial, Helvetica, sans-serif;
 }
